--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@
 
           <h1 id="project_title">Shrunked Image Resizer</h1>
           <h2 id="project_tagline">for Thunderbird, Firefox and SeaMonkey</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/darktrojan/shrunked/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/darktrojan/shrunked/tarball/master">Download this project as a tar.gz file</a>
-            </section>
         </header>
     </div>
 
@@ -32,14 +27,22 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <p>Shrunked is an extension that resizes your photos before you upload them to a website or email them. It greatly reduces the time spent waiting for photos to upload.</p>
+        <p>You can get Shrunked from <a href="https://addons.mozilla.org/addon/shrunked-image-resizer?src=external-github">addons.mozilla.org</a>.</p>
+        <p style="text-align: center"><img src="images/3.2-options.png" width="485" height="405" alt="Shrunked Image Resizer dialog in version 3.2" /></p>
+        <h3>Localization</h3>
+        <p>You might be here because you'd like to see Shrunked in your language. Great!</p>
+        <p>To translate, you can:</p>
+        <ul>
+          <li>Fork the Git repository, translate, and send me a pull request. Some knowledge of creating Mozilla add-ons is required.</li>
+          <li>Or, visit <a href="http://zoo.darktrojan.net/darktrojan/shrunked/repo.php">the project's page on Zoo</a>, a website for add-on translation. (Please note that Zoo is under development, and could break at any time. It's mostly stable though.)</li>
+        </ul>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Shrunked Image Resizer maintained by <a href="https://github.com/darktrojan">darktrojan</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">Shrunked Image Resizer maintained by <a href="https://github.com/darktrojan">darktrojan</a> &middot; Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
