--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/darktrojan/shrunked">View on GitHub</a>
 
+          <div style="float: left; width: 158px"><img src="images/icon-128.png" style="border: none; box-shadow: none; margin: 0" /></div>
           <h1 id="project_title">Shrunked Image Resizer</h1>
           <h2 id="project_tagline">for Thunderbird, Firefox and SeaMonkey</h2>
         </header>
