--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <p>Shrunked is an extension that resizes your photos before you upload them to a website or email them. It greatly reduces the time spent waiting for photos to upload.</p>
-        <p>You can get Shrunked from <a href="https://addons.mozilla.org/addon/shrunked-image-resizer?src=external-github">addons.mozilla.org</a>.</p>
+        <p>You can get Shrunked from <a href="https://addons.mozilla.org/addon/shrunked-image-resizer?src=external-github">addons.mozilla.org</a>. If you got it from somewhere else, including my own website, it's not genuine. Visit a.m.o. and get a fresh copy.</p>
         <p style="text-align: center"><img src="images/3.2-options.png" width="485" height="405" alt="Shrunked Image Resizer dialog in version 3.2" /></p>
         <h3>Localization</h3>
         <p>You might be here because you'd like to see Shrunked in your language. Great!</p>
