Update to match New Tab Tools page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         </ul>
         <h3>Contribute code</h3>
         <p>Want to add some functionality to Shrunked? Feel free to send me a pull request.</p>
+        <p>To get a working version of this repo in your Firefox profile, clone it into your extensions directory as <code>shrunked@darktrojan.net</code> and start Firefox.</p>
+        <pre>cd [your profile dir]/extensions
+clone git://github.com/darktrojan/shrunked.git shrunked@darktrojan.net</pre>
         <h3>Contribute money</h3>
         <p>Add-ons are available for free, but developing and supporting them does take a considerable amount of time. Please consider making a donation to help me pay my bills. You can contribute any amount you like <a href="https://addons.mozilla.org/addon/shrunked-image-resizer/contribute/installed/">through PayPal via addons.mozilla.org</a>. (Note though that for amounts smaller than about US$1, PayPal takes most of it.)</p>
       </section>
