Match other repos look

--- a/index.html
+++ b/index.html
@@ -1,60 +1,49 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Shrunked Image Resizer : for Thunderbird, Firefox and SeaMonkey" />
-
+    <meta name="description" content="Shrunked Image Resizer for Thunderbird, Firefox and SeaMonkey" />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
     <title>Shrunked Image Resizer</title>
   </head>
 
   <body>
-
-    <!-- HEADER -->
     <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/darktrojan/shrunked">View on GitHub</a>
-
-          <div style="float: left; width: 158px"><img src="images/icon-128.png" style="border: none; box-shadow: none; margin: 0" /></div>
-          <h1 id="project_title">Shrunked Image Resizer</h1>
-          <h2 id="project_tagline">for Thunderbird, Firefox and SeaMonkey</h2>
-        </header>
+      <header class="inner">
+        <h1><img src="images/header-wide.png" width="573" height="110" alt="DarkTrojan" /></h1>
+      </header>
     </div>
 
-    <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <p>Shrunked is an extension that resizes your photos before you upload them to a website or email them. It greatly reduces the time spent waiting for photos to upload.</p>
-        <p>You can get Shrunked from <a href="https://addons.mozilla.org/addon/shrunked-image-resizer?src=external-github">addons.mozilla.org</a>. If you got it from somewhere else, including my own website, it's not genuine. Visit a.m.o. and get a fresh copy.</p>
-        <p style="text-align: center"><img src="images/3.2-options.png" width="485" height="405" alt="Shrunked Image Resizer dialog in version 3.2" /></p>
-        <h3>Localization</h3>
-        <p>You might be here because you'd like to see Shrunked in your language. Great!</p>
-        <p>To translate, you can:</p>
-        <ul>
-          <li>Fork the Git repository, translate, and send me a pull request. Some knowledge of creating Mozilla add-ons is required.</li>
-          <li>Or, visit <a href="http://zoo.darktrojan.net/darktrojan/shrunked/repo.php">the project's page on Zoo</a>, a website for add-on translation. (Please note that Zoo is under development, and could break at any time. It's mostly stable though.)</li>
-        </ul>
-        <h3>Contribute code</h3>
-        <p>Want to add some functionality to Shrunked? Feel free to send me a pull request.</p>
-        <p>To get a working version of this repo in your Firefox profile, clone it into your extensions directory as <code>shrunked@darktrojan.net</code> and start Firefox.</p>
-        <pre>cd [your profile dir]/extensions
+      <div id="main_content" class="inner">
+        <a id="forkme_banner" href="https://github.com/darktrojan/shrunked">View on GitHub</a>
+
+        <div style="text-align: center">
+          <img src="images/shrunked/shrunked128.png" style="border: none; box-shadow: none; margin: 0; display: inline-block; vertical-align: middle;" /><h2 style="margin-left: 20px; display: inline-block; vertical-align: middle; padding: 0;">Shrunked Image Resizer</h2>
+        </div>
+
+        <section id="main_left">
+          <h3>About</h3>
+          <p>Shrunked is an extension that resizes your photos before you upload them to a website or email them. It greatly reduces the time spent waiting for photos to upload.</p>
+          <p>You can get Shrunked from <a href="https://addons.mozilla.org/addon/shrunked-image-resizer?src=external-github">addons.mozilla.org</a>. If you got it from somewhere else, including my own website, it's not genuine. Visit a.m.o. and get a fresh copy.</p>
+          <p style="text-align: center"><img src="images/shrunked/3.2-options.png" width="485" height="405" alt="Shrunked Image Resizer dialog in version 3.2" /></p>
+        </section><section id="main_right">
+          <h3>Localization</h3>
+          <p>You might be here because you'd like to see Shrunked in your language. Great!</p>
+          <p>To translate, you can:</p>
+          <ul>
+            <li>Fork the Git repository, translate, and send me a pull request. Some knowledge of creating Mozilla add-ons is required.</li>
+            <li>Or, visit <a href="http://zoo.darktrojan.net/darktrojan/shrunked/repo.php">the project's page on Zoo</a>, a website for add-on translation. (Please note that Zoo is under development, and could break at any time. It's mostly stable though.)</li>
+          </ul>
+          <h3>Contribute code</h3>
+          <p>Want to add some functionality to Shrunked? Feel free to send me a pull request.</p>
+          <p>To get a working version of this repo in your Firefox profile, clone it into your extensions directory as <code>shrunked@darktrojan.net</code> and start Firefox.</p>
+          <pre>cd [your profile dir]/extensions
 git clone git://github.com/darktrojan/shrunked.git shrunked@darktrojan.net</pre>
-        <h3>Contribute money</h3>
-        <p>Add-ons are available for free, but developing and supporting them does take a considerable amount of time. Please consider making a donation to help me pay my bills. You can contribute any amount you like <a href="https://addons.mozilla.org/addon/shrunked-image-resizer/contribute/installed/">through PayPal via addons.mozilla.org</a>. (Note though that for amounts smaller than about US$1, PayPal takes most of it.)</p>
-      </section>
+          <h3>Contribute money</h3>
+          <p>Add-ons are available for free, but developing and supporting them does take a considerable amount of time. Please consider making a donation to help me pay my bills. You can contribute any amount you like <a href="https://addons.mozilla.org/addon/shrunked-image-resizer/contribute/installed/">through PayPal via addons.mozilla.org</a>. (Note though that for amounts smaller than about US$1, PayPal takes most of it.)</p>
+        </section>
+      </div>
     </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Shrunked Image Resizer maintained by <a href="https://github.com/darktrojan">darktrojan</a> &middot; Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
   </body>
 </html>
