One theme to rule them all

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset='utf-8' />
     <meta name="description" content="Shrunked Image Resizer for Thunderbird, Firefox and SeaMonkey" />
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
     <title>Shrunked Image Resizer</title>
   </head>
 
   <body>
     <div id="header_wrap" class="outer">
       <header class="inner">
-        <h1><img src="images/header-wide.png" width="573" height="110" alt="DarkTrojan" /></h1>
+        <h1><img src="../images/header-wide.png" width="573" height="110" alt="DarkTrojan" /></h1>
       </header>
     </div>
 
@@ -18,15 +18,13 @@
       <div id="main_content" class="inner">
         <a id="forkme_banner" href="https://github.com/darktrojan/shrunked">View on GitHub</a>
 
-        <div style="text-align: center">
-          <img src="images/shrunked/shrunked128.png" style="border: none; box-shadow: none; margin: 0; display: inline-block; vertical-align: middle;" /><h2 style="margin-left: 20px; display: inline-block; vertical-align: middle; padding: 0;">Shrunked Image Resizer</h2>
-        </div>
+        <h2 id="page_title"><img src="shrunked128.png" />Shrunked Image Resizer</h2>
 
         <section id="main_left">
           <h3>About</h3>
           <p>Shrunked is an extension that resizes your photos before you upload them to a website or email them. It greatly reduces the time spent waiting for photos to upload.</p>
-          <p>You can get Shrunked from <a href="https://addons.mozilla.org/addon/shrunked-image-resizer?src=external-github">addons.mozilla.org</a>. If you got it from somewhere else, including my own website, it's not genuine. Visit a.m.o. and get a fresh copy.</p>
-          <p style="text-align: center"><img src="images/shrunked/3.2-options.png" width="485" height="405" alt="Shrunked Image Resizer dialog in version 3.2" /></p>
+          <p>You can get Shrunked from <a href="https://addons.mozilla.org/addon/shrunked-image-resizer?src=external-github">addons.mozilla.org</a>. If you got it from somewhere else, it's not genuine. Visit a.m.o. and get a fresh copy.</p>
+          <p style="text-align: center"><img src="3.2-options.png" width="485" height="405" alt="Shrunked Image Resizer dialog in version 3.2" /></p>
         </section><section id="main_right">
           <h3>Localization</h3>
           <p>You might be here because you'd like to see Shrunked in your language. Great!</p>
