Update links to stuff

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <p>To translate, you can:</p>
           <ul>
             <li>Fork the Git repository, translate, and send me a pull request. Some knowledge of creating Mozilla add-ons is required.</li>
-            <li>Or, visit <a href="http://zoo.darktrojan.net/darktrojan/shrunked/repo.php">the project's page on Zoo</a>, a website for add-on translation. (Please note that Zoo is under development, and could break at any time. It's mostly stable though.)</li>
+            <li><strike>Or, visit <a href="http://zoo.darktrojan.net/darktrojan/shrunked/repo.php">the project's page on Zoo</a>, a website for add-on translation. (Please note that Zoo is under development, and could break at any time. It's mostly stable though.)</strike></li>
           </ul>
           <h3>Contribute code</h3>
           <p>Want to add some functionality to Shrunked? Feel free to send me a pull request.</p>
@@ -39,7 +39,7 @@
           <pre>cd [your profile dir]/extensions
 git clone git://github.com/darktrojan/shrunked.git shrunked@darktrojan.net</pre>
           <h3>Contribute money</h3>
-          <p>Add-ons are available for free, but developing and supporting them does take a considerable amount of time. Please consider making a donation to help me pay my bills. You can contribute any amount you like <a href="https://addons.mozilla.org/addon/shrunked-image-resizer/contribute/installed/">through PayPal via addons.mozilla.org</a>. (Note though that for amounts smaller than about US$1, PayPal takes most of it.)</p>
+          <p>Add-ons are available for free, but developing and supporting them does take a considerable amount of time. Please consider making a donation to help me pay my bills. You can contribute any amount you like <a href="https://darktrojan.github.io/donate.html?shrunked">through PayPal or BitCoin</a>. (Note though that for amounts smaller than about US$1, PayPal takes most of it.)</p>
         </section>
       </div>
     </div>
