get preview images vaguely functional

--- a/content/options.xhtml
+++ b/content/options.xhtml
@@ -38,7 +38,7 @@
 			</div>
 		</div>
 		<h1 id="l_previewheader" data-l10n-content="shrunked-preview.label" hidden=""></h1>
-		<div id="b_previewbox" flex="1" minwidth="400" style="display: none;">
+		<div id="b_previewbox" flex="1" minwidth="400" style="display: flex">
 			<div id="b_previewarrows" pack="center" align="center" style="display: flex; flex-direction: column;">
 				<button tabindex="0" data-l10n-title="shrunked-preview.previous.tooltip"></button>
 				<label id="l_previewarrows" />
@@ -61,6 +61,7 @@
 
 		<div>
 			<button id="b_ok" type="button">OK</button>
+			<button id="b_cancel" type="button">Cancel</button>
 		</div>
 
 		<script src="options.js"></script>
