--- a/content/options.xhtml
+++ b/content/options.xhtml
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="options.css" type="text/css"/>
 		<script src="options.js" defer=""></script>
 	</head>
-	<body>
+	<body id="options">
 		<div id="rg_size">
 			<h1 data-l10n-content="shrunked-maxsize.label"></h1>
 				<label><input type="radio" name="rg_size" id="r_noresize" /><span data-l10n-content="shrunked-noresize.label"></span></label>
