--- a/content/config.xhtml
+++ b/content/config.xhtml
@@ -9,23 +9,23 @@
 	<body id="config">
 		<div id="tp_defaults" style="display: flex; flex-direction: column;">
 			<div>
-				<label data-l10n-content="shrunked-minsize.label" />
+				<label data-l10n-content="minsize.label" />
 				<input
 					id="tb_minsize"
 					type="number"
 					step="10"
 					min="0" />
-				<label data-l10n-content="shrunked-unit.kilobytes" />
+				<label data-l10n-content="unit.kilobytes" />
 			</div>
 
-			<label data-l10n-content="shrunked-maxsize.label" />
-			<label class="indent"><input type="radio" name="rg_size" id="r_noresize" /><span data-l10n-content="shrunked-noresize.label"></span></label>
-			<label class="indent"><input type="radio" name="rg_size" id="r_small" /><span data-l10n-content="shrunked-small.label"></span></label>
-			<label class="indent"><input type="radio" name="rg_size" id="r_medium" /><span data-l10n-content="shrunked-medium.label"></span></label>
-			<label class="indent"><input type="radio" name="rg_size" id="r_large" /><span data-l10n-content="shrunked-large.label"></span></label>
+			<label data-l10n-content="maxsize.label" />
+			<label class="indent"><input type="radio" name="rg_size" id="r_noresize" /><span data-l10n-content="noresize.label"></span></label>
+			<label class="indent"><input type="radio" name="rg_size" id="r_small" /><span data-l10n-content="small.label"></span></label>
+			<label class="indent"><input type="radio" name="rg_size" id="r_medium" /><span data-l10n-content="medium.label"></span></label>
+			<label class="indent"><input type="radio" name="rg_size" id="r_large" /><span data-l10n-content="large.label"></span></label>
 			<div class="indent">
-				<label><input type="radio" name="rg_size" id="r_custom" /><span data-l10n-content="shrunked-custom.label"></span></label>
-				<label id="l_width" control="customvalue1" disabled="true"><span data-l10n-content="shrunked-width.label"></span>
+				<label><input type="radio" name="rg_size" id="r_custom" /><span data-l10n-content="custom.label"></span></label>
+				<label id="l_width" control="customvalue1" disabled="true"><span data-l10n-content="width.label"></span>
 					<input
 						id="tb_width"
 						type="number"
@@ -34,9 +34,9 @@
 						min="100"
 						max="2500"
 						disabled="true" />
-					<label data-l10n-content="shrunked-custom.pixels"></label>
+					<label data-l10n-content="custom.pixels"></label>
 				</label>
-				<label id="l_height" control="customvalue2" disabled="true"><span data-l10n-content="shrunked-height.label"></span>
+				<label id="l_height" control="customvalue2" disabled="true"><span data-l10n-content="height.label"></span>
 					<input
 						id="tb_height"
 						type="number"
@@ -45,35 +45,35 @@
 						min="100"
 						max="2500"
 						disabled="true" />
-					<label id="l_measure" data-l10n-content="shrunked-custom.pixels"></label>
+					<label id="l_measure" data-l10n-content="custom.pixels"></label>
 				</label>
 			</div>
 
-			<label data-l10n-content="shrunked-defaults.quality.label" />
+			<label data-l10n-content="defaults.quality.label" />
 			<div style="display: flex; align-items: center;" class="indent">
-				<label data-l10n-content="shrunked-defaults.quality.smaller" />
+				<label data-l10n-content="defaults.quality.smaller" />
 				<input
 					id="s_quality"
 					type="range"
 					min="30"
 					max="100"
 					step="5" />
-				<label data-l10n-content="shrunked-defaults.quality.better" />
+				<label data-l10n-content="defaults.quality.better" />
 			</div>
 		</div>
 		<div id="tp_advanced" style="display: flex; flex-direction: column;">
-			<label><input type="checkbox" id="cb_resample" name="options.resample" /><span data-l10n-content="shrunked-advanced.resample.label"></span></label>
-			<label><input type="checkbox" id="cb_exif" name="options.exif" oncommand="enableExif()" /><span data-l10n-content="shrunked-advanced.exif.label"></span></label>
+			<label><input type="checkbox" id="cb_resample" name="options.resample" /><span data-l10n-content="advanced.resample.label"></span></label>
+			<label><input type="checkbox" id="cb_exif" name="options.exif" oncommand="enableExif()" /><span data-l10n-content="advanced.exif.label"></span></label>
 			<div style="display: flex; flex-direction: column;" class="indent">
-				<label><input type="checkbox" id="cb_orient" name="options.orient" /><span data-l10n-content="shrunked-advanced.orient.label"></span></label>
-				<label><input type="checkbox" id="cb_gps" name="options.gps" /><span data-l10n-content="shrunked-advanced.gps.label" ></span></label>
+				<label><input type="checkbox" id="cb_orient" name="options.orient" /><span data-l10n-content="advanced.orient.label"></span></label>
+				<label><input type="checkbox" id="cb_gps" name="options.gps" /><span data-l10n-content="advanced.gps.label" ></span></label>
 			</div>
-			<label><input type="checkbox" id="cb_logenabled" name="log.enabled" /><span data-l10n-content="shrunked-advanced.logenabled.label"></span></label>
+			<label><input type="checkbox" id="cb_logenabled" name="log.enabled" /><span data-l10n-content="advanced.logenabled.label"></span></label>
 			<div id="b_resizeonsend">
-				<label data-l10n-content="shrunked-advanced.resizeonsend.label" />
+				<label data-l10n-content="advanced.resizeonsend.label" />
 				<select id="s_resizeonsend">
-					<option value="false" data-l10n-label="shrunked-advanced.resizeonsend.false" />
-					<option value="true" data-l10n-label="shrunked-advanced.resizeonsend.true" />
+					<option value="false" data-l10n-label="advanced.resizeonsend.false" />
+					<option value="true" data-l10n-label="advanced.resizeonsend.true" />
 				</select>
 			</div>
 		</div>
