--- a/content/options.xhtml
+++ b/content/options.xhtml
@@ -8,14 +8,14 @@
 	</head>
 	<body id="options">
 		<div id="rg_size">
-			<h1 data-l10n-content="shrunked-maxsize.label"></h1>
-				<label><input type="radio" name="rg_size" id="r_noresize" /><span data-l10n-content="shrunked-noresize.label"></span></label>
-				<label><input type="radio" name="rg_size" id="r_small" /><span data-l10n-content="shrunked-small.label"></span></label>
-				<label><input type="radio" name="rg_size" id="r_medium" /><span data-l10n-content="shrunked-medium.label"></span></label>
-				<label><input type="radio" name="rg_size" id="r_large" /><span data-l10n-content="shrunked-large.label"></span></label>
+			<h1 data-l10n-content="maxsize.label"></h1>
+				<label><input type="radio" name="rg_size" id="r_noresize" /><span data-l10n-content="noresize.label"></span></label>
+				<label><input type="radio" name="rg_size" id="r_small" /><span data-l10n-content="small.label"></span></label>
+				<label><input type="radio" name="rg_size" id="r_medium" /><span data-l10n-content="medium.label"></span></label>
+				<label><input type="radio" name="rg_size" id="r_large" /><span data-l10n-content="large.label"></span></label>
 				<div>
-					<label><input type="radio" name="rg_size" id="r_custom" /><span data-l10n-content="shrunked-custom.label"></span></label>
-					<label id="l_width" control="customvalue1" disabled="true"><span data-l10n-content="shrunked-width.label"></span>
+					<label><input type="radio" name="rg_size" id="r_custom" /><span data-l10n-content="custom.label"></span></label>
+					<label id="l_width" control="customvalue1" disabled="true"><span data-l10n-content="width.label"></span>
 						<input
 							id="tb_width"
 							type="number"
@@ -24,9 +24,9 @@
 							min="100"
 							max="2500"
 							disabled="true" />
-						<label data-l10n-content="shrunked-custom.pixels"></label>
+						<label data-l10n-content="custom.pixels"></label>
 					</label>
-					<label id="l_height" control="customvalue2" disabled="true"><span data-l10n-content="shrunked-height.label"></span>
+					<label id="l_height" control="customvalue2" disabled="true"><span data-l10n-content="height.label"></span>
 						<input
 							id="tb_height"
 							type="number"
@@ -35,15 +35,15 @@
 							min="100"
 							max="2500"
 							disabled="true" />
-						<label id="l_measure" data-l10n-content="shrunked-custom.pixels"></label>
+						<label id="l_measure" data-l10n-content="custom.pixels"></label>
 					</label>
 				</div>
-			<h1 id="l_previewheader" data-l10n-content="shrunked-preview.label" hidden=""></h1>
+			<h1 id="l_previewheader" data-l10n-content="preview.label" hidden=""></h1>
 			<div id="b_previewbox">
 				<div id="b_previewarrows">
-					<button id="b_previous" tabindex="0" data-l10n-title="shrunked-preview.previous.tooltip"></button>
+					<button id="b_previous" tabindex="0" data-l10n-title="preview.previous.tooltip"></button>
 					<label id="l_previewarrows" />
-					<button id="b_next" tabindex="0" data-l10n-title="shrunked-preview.next.tooltip"></button>
+					<button id="b_next" tabindex="0" data-l10n-title="preview.next.tooltip"></button>
 				</div>
 				<div id="d_preview">
 					<img id="i_previewthumb"/>
@@ -56,7 +56,7 @@
 					<label id="l_previewresizedfilesize" crop="end" />
 				</div>
 			</div>
-			<label><input type="checkbox" id="cb_savedefault" /><span data-l10n-content="shrunked-options.savedefault.label"></span></label>
+			<label><input type="checkbox" id="cb_savedefault" /><span data-l10n-content="options.savedefault.label"></span></label>
 		</div>
 		<div id="d_buttons">
 			<button id="b_ok" type="button">OK</button>
