--- a/content/config.xhtml
+++ b/content/config.xhtml
@@ -54,7 +54,7 @@
         <label><input type="checkbox" id="cb_orient" name="options.orient" /><span data-l10n-content="advanced.orient.label"></span></label>
         <label><input type="checkbox" id="cb_gps" name="options.gps" /><span data-l10n-content="advanced.gps.label" ></span></label>
       </div>
-      <label><input type="checkbox" id="cb_logenabled" name="log.enabled" /><span data-l10n-content="advanced.logenabled.label"></span></label>
+      <!-- <label><input type="checkbox" id="cb_logenabled" name="log.enabled" /><span data-l10n-content="advanced.logenabled.label"></span></label> -->
       <div id="b_resizeonsend">
         <label data-l10n-content="advanced.resizeonsend.label" />
         <select id="s_resizeonsend">
