--- a/content/options.xhtml
+++ b/content/options.xhtml
@@ -39,11 +39,11 @@
           <img id="i_previewthumb" class="vbox"/>
         </div>
         <div id="d_info" class="vbox">
-          <label id="l_previewfilename" class="header" crop="end" />
-          <label id="l_previeworiginalsize" crop="end" />
-          <label id="l_previeworiginalfilesize" crop="end" />
-          <label id="l_previewresized" crop="end" />
-          <label id="l_previewresizedfilesize" crop="end" />
+          <label id="l_previewfilename"/>
+          <label id="l_previeworiginalsize"/>
+          <label id="l_previeworiginalfilesize"/>
+          <label id="l_previewresized"/>
+          <label id="l_previewresizedfilesize"/>
         </div>
       </div>
       <label><input type="checkbox" id="cb_savedefault" /><span data-l10n-content="options.savedefault.label"></span></label>
